--- a/font.html
+++ b/font.html
@@ -95,5 +95,13 @@
         </tr>
       </tbody>
     </table>
+    <hr>
+    <div>
+      <h1>TEXT</h1>
+      <h4 >Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, praesentium maiores, consectetur voluptatibus totam ab deserunt blanditiis expedita eum fugit quaerat esse quis impedit reprehenderit? Quod, eaque. Deleniti, quibusdam aperiam.</h4>
+    </div>
+    <div>
+      <h6>Muskan Tuteja</h6>
+    </div>
   </body>
 </html>
