--- a/font.html
+++ b/font.html
@@ -70,6 +70,8 @@
     
     <h1>Table</h1>
     <table>
+      <caption>Student
+        </caption>
       <thead>
         <tr>
           <th>roll no</th>
@@ -90,7 +92,7 @@
         </tr>
         <tr>
           <td>3</td>
-          <td>bca</td>
+          <td></td>
           <td>java</td>
         </tr>
       </tbody>
