--- a/index.html
+++ b/index.html
@@ -34,11 +34,10 @@
   <h5>hello!</h5>
   <h6>hello!</h6>
   
-  <p>Lorem ipsum dolor sit amet <sup>consectetursip</sup> adipisicing elit. Id ducimus cumque quaerat saepe at incidunt fuga similique. Mollitia, sed ipsum numquam eos <sub>repellendus</sb>praesentium <b>###hello#</b>recusandae rerum unde est odit asperiores.
+  Lorem ipsum dolor sit amet <sup>consectetursip</sup> adipisicing elit. Id ducimus cumque quaerat saepe at incidunt fuga similique. Mollitia, sed ipsum numquam eos <sub>repellendus</sb>praesentium <b>###hello#</b>recusandae rerum unde est odit asperiores.
     Lorem ipsum dolor sit amet consectetur adipisicing elit. <q>Deserunt, voluptates</q>aperiam? <i>Aliquam delectus non, odio eos tenetur harum sunt fuga esse voluptas, repellat provident repellendus beatae voluptates ipsa magnam magni.</i>
-
     Lorem ipsum dolor sit amet consectetur adipisicing elit. <del>Inventore</del> consectetur, libero error doloremque iure atque beatae, dolore magnam aut itaque nemo facere nulla omnis, nesciunt <ins>necessitatibus reprehenderit voluptates sequi neque.</ins>
-  </p>
+
 
   <!-- list tag -->
    <h1>Lists</h1>
@@ -242,5 +241,74 @@
 <!-- button tag -->
  <button accesskey="s">Lagin</button>
 
+
+ <!-- 19/6/25
+  display -->
+  <div class="blo">
+    <p id="in"> Introduction Display
+      <h1>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo rem vero, asperiores ullam vitae unde dolorum illo eum provident, impedit adipisci ipsum eaque atque. Aut esse ipsa sunt fugiat doloribus.
+        <img src="images/house.png">
+      </h1>
+    </p>
+  </div>
+  <a href="">div1</a>
+  <a href="">div1</a>
+  <a href="">div1</a>
+  <a href="">div1</a>
+  <a href="">div1</a>
+
+<img src="images/github.png" alt="muskan">
+<img src="images/github.png" alt="">
+<img src="images/github.png" alt="">
+<img src="images/github.png" alt="">
+<img src="images/github.png" alt="">
+
+<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, veniam sit nesciunt laborum dolorem voluptatum, eum illum beatae autem dolores accusamus, tempora iusto dolore eius non blanditiis iure quibusdam nisi?</h2>
+
+
+<div class="outer">
+ 
+<h1>muskan 1</h1>
+<h1>muskan 2</h1>
+<h1>muskan 3</h1>
+<h1>muskan 4</h1>
+<h1>muskan 5</h1>
+<h1>muskan 1</h1>
+<h1>muskan 2</h1>
+<h1>muskan 3</h1>
+<h1>muskan 4</h1>
+<h1>muskan 5</h1>
+<h1>muskan 1</h1>
+<h1>muskan 2</h1>
+<h1>muskan 3</h1>
+<h1>muskan 4</h1>
+<h1>muskan 5</h1>
+<h1>muskan 1</h1>
+<h1>muskan 2</h1>
+<h1>muskan 3</h1>
+<h1>muskan 4</h1>
+<h1>muskan 5</h1>
+  </div>
+  <div class="inner">
+ <h7>muskan6</h7>
+ <h7>muskan6</h7>
+ <h7>muskan6</h7>
+ <h7>muskan6</h7>
+ <h7>muskan6</h7>
+ <h7>muskan6</h7>
+ <h7>muskan6</h7>
+ <h7>muskan10</h7>
+ <h7>muskan6</h7>
+ <h7>muskan6</h7>
+ <h7>muskan6</h7>
+ <h7>muskan6</h7>
+ <h7>muskan6</h7>
+ <h7>muskan6</h7>
+ <h7>muskan6</h7>
+ <h7>muskan10</h7>
+</div>
+<section></section>
+<div class="jus">Muskan  muskan.</div>
 </body>
 </html>
