--- a/index.html
+++ b/index.html
@@ -310,5 +310,27 @@
 </div>
 <section></section>
 <div class="jus">Muskan  muskan.</div>
+
+<!-- dispaly grid -->
+  <p class="gri">Dispaly grid</p>
+ <div class="outter">
+ <h5 class="inner1"style="background-color: blueviolet;">isha 1></h5>
+ <h5 style="background-color: chocolate;">isha 2</h5>
+ <h5 style="background-color: crimson;">isha 3</h5>
+ <h5 style="background-color: darkorange;">isha 4</h5>
+ <h5 style="background-color: darksalmon;">isha 5</h5>
+ <h5 style="background-color: forestgreen;">isha 6</h5>
+ </div>
+ 
+ <div class="outterr">
+ <h5 class="inner2"style="background-color: blueviolet;">isha 1></h5>
+ <h5 style="background-color: chocolate;">isha 2</h5>
+ <h5 style="background-color: crimson;">isha 3</h5>
+ <h5 style="background-color: darkorange;">isha 4</h5>
+ <h5 style="background-color: darksalmon;">isha 5</h5>
+ <h5 style="background-color: forestgreen;">isha 6</h5>
+ </div>
+
+ 
 </body>
 </html>
