--- a/font.html
+++ b/font.html
@@ -67,11 +67,12 @@
       <li>pmkilo</li>
     </ol>
     <hr />
-    
+
     <h1>Table</h1>
     <table>
-      <caption>Student
-        </caption>
+      <caption>
+        Student
+      </caption>
       <thead>
         <tr>
           <th>roll no</th>
@@ -97,13 +98,43 @@
         </tr>
       </tbody>
     </table>
-    <hr>
+    <hr />
     <div>
       <h1>TEXT</h1>
-      <h4 >Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, praesentium maiores, consectetur voluptatibus totam ab deserunt blanditiis expedita eum fugit quaerat esse quis impedit reprehenderit? Quod, eaque. Deleniti, quibusdam aperiam.</h4>
+      <h4>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis,
+        praesentium maiores, consectetur voluptatibus totam ab deserunt
+        blanditiis expedita eum fugit quaerat esse quis impedit reprehenderit?
+        Quod, eaque. Deleniti, quibusdam aperiam.
+      </h4>
     </div>
     <div>
       <h6>Muskan Tuteja</h6>
+    </div>
+
+    <h1>Position Property</h1>
+    <p class="gri">static</p>
+    <div class="search-icon">
+      <input type="text" placeholder="search" />
+      <i class="fa-solid fa-magnifying-glass-dollar"></i>
+    </div>
+
+    <p class="grii">Relatives</p>
+    <div class="search-img">
+      <input type="text" placeholder="search" />
+      <i class=" fa-solid fa-magnifying-glass-plus"></i>
+    </div>
+
+    <p class="griii">Absolute</p>
+    <div class="search-imgg">
+      <input type="text" placeholder="search" />
+     <i class="fa-solid fa-magnifying-glass-location"></i>
+    </div>
+
+    <p class="gr">Absolute 1</p>
+    <div class="search-im">
+      <input type="text" placeholder="search" />
+     <i class="fa-solid fa-magnifying-glass-minus"></i>
     </div>
   </body>
 </html>
