--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Basics!</title>
+  <link
+      rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    />
   <link rel="stylesheet" href="style.css">
 
 </head>
@@ -34,9 +38,7 @@
   <h5>hello!</h5>
   <h6>hello!</h6>
   
-  Lorem ipsum dolor sit amet <sup>consectetursip</sup> adipisicing elit. Id ducimus cumque quaerat saepe at incidunt fuga similique. Mollitia, sed ipsum numquam eos <sub>repellendus</sb>praesentium <b>###hello#</b>recusandae rerum unde est odit asperiores.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. <q>Deserunt, voluptates</q>aperiam? <i>Aliquam delectus non, odio eos tenetur harum sunt fuga esse voluptas, repellat provident repellendus beatae voluptates ipsa magnam magni.</i>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. <del>Inventore</del> consectetur, libero error doloremque iure atque beatae, dolore magnam aut itaque nemo facere nulla omnis, nesciunt <ins>necessitatibus reprehenderit voluptates sequi neque.</ins>
+
 
 
   <!-- list tag -->
@@ -100,26 +102,26 @@
     <th>Class</th>
     <th>Roll NO</th>
     <th>Course</th>
-    <tr>
-      <!-- <td>data</td> -->
-       <td rowspan="3">muskan</td>
-       <td>bse</td>
-       <td rowspan="2">23</td>
-       <td>css</td>
     </tr>
     <tr>
-       <td>mahi</td>
-       <td>bca</td>
-       <td colspan="2">23</td>
-       <td>py</td>
+          <!-- <td>data</td> -->
+      <td rowspan="3">muskan</td>
+      <td>bse</td>
+      <td rowspan="2">23</td>
+      <td>css</td>
+    
+    <tr>
+      <td>mahi</td>
+      <td>bca</td>
+      <td colspan="2">23</td>
+      <td>py</td>
     </tr>
     <tr>
-       <td>muskan</td>
-       <td>cse</td>
-       <td>29</td>
-       <td>java</td>
+      <td>muskan</td>
+      <td>cse</td>
+      <td>29</td>
+      <td>java</td>
     </tr>
-   
   </tr>
 </table>
 
@@ -331,6 +333,19 @@
  <h5 style="background-color: forestgreen;">isha 6</h5>
  </div>
 
+ <p class="gri">Position proper</p>
+  <div class="search-icon">
+  <input type="text" placeholder="search">
+  <i class="fa-solid fa-magnifying-glass-dollar"></i>
+</div>
+
+
+
  
 </body>
+      <p class="grii">Seach icon</p>
+      <div class="search-img">
+      <input type="text" placeholder="search text">
+      <i class="fa-solid fa-magnifying-glass-plus"></i>
+</div>
 </html>
