--- a/font.html
+++ b/font.html
@@ -23,7 +23,7 @@
     />
   </head>
   <body>
-    <h1>basics font</h1>
+    <!-- <h1>basics font</h1>
     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
     <hr />
     Commodi blanditiis
@@ -110,7 +110,7 @@
     </div>
     <div>
       <h6>Muskan Tuteja</h6>
-    </div>
+    </div> -->
 
     <h1>Position Property</h1>
     <p class="gri">static</p>
