--- a/messho.html
+++ b/messho.html
@@ -1,87 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link
       rel="stylesheet"
       href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
     />
-  <link rel="stylesheet" href="messho.css">
-</head>
-<body>
-  <header>
-    <img src="images/messho.png" alt="img" srcset="">
+    <link rel="stylesheet" href="messho.css" />
+  </head>
+  <body>
+    <header>
+      <img src="images/messho.png" alt="img" srcset="" />
       <search class="search-icon">
-        <input type="text" placeholder="Try Saree,Kurti or Search by.......">
+        <input type="text" placeholder="Try Saree,Kurti or Search by......." />
         <i class="fa-solid fa-magnifying-glass"></i>
       </search>
-    <nav>
+      <nav>
+        <ul>
+          <li><a href="#">Become A Supplier</a></li>
+          <li><a href="#">Investor</a></li>
+          <li>
+            Proflie
+            <i class="fa-solid fa-user"></i>
+          </li>
+          <li>
+            Cart
+            <i class="fa-solid fa-cart-shopping"></i>
+          </li>
+          <!-- menu -->
+          <div class="menu-container">
+            <i class="fa-solid fa-bars menu-icon"></i>
+            <ul class="menu-dropdown">
+              <li>Home</li>
+              <li>Categories</li>
+              <li>Contact</li>
+            </ul>
+          </div>
+        </ul>
+      </nav>
+    </header>
+    <hr />
+    <div>
       <ul>
-        <li><a href="#">Become A Supplier</a></li>
-        <li><a href="#">Investor</a></li>
-        <li>Proflie
-          <i class="fa-solid fa-user"></i>
+        <li>
+          Women Ethnic
+
+          <ul>
+            <hr />
+            <li>Sarees</li>
+            <li>
+              Suit
+              <ul>
+                <li>shot kurti</li>
+                <li>long kurti</li>
+              </ul>
+            </li>
+            <li>Kurta</li>
+            <li>Top</li>
+          </ul>
         </li>
-        <li>Cart
-          <i class="fa-solid fa-cart-shopping"></i>
+        <li>
+          Women Western
+          <ul>
+            <hr />
+            <li>Tops</li>
+            <li>Dresses</li>
+          </ul>
+        </li>
+        <li>
+          Men
+          <ul>
+            <hr />
+            <li>Jeans</li>
+            <li>T-Shrits</li>
+          </ul>
+        </li>
+        <li>
+          Kids
+          <ul>
+            <hr />
+            <li>bady set</li>
+            <li>Dresses</li>
+          </ul>
+        </li>
+        <li>
+          Home&Kitchen
+
+          <ul>
+            <hr />
+            <li>Cookeware</li>
+            <li>Dinnerware</li>
+          </ul>
+        </li>
+        <li>
+          Beauty & Healt
+          <ul>
+            <hr />
+            <li>Lips</li>
+            <li>Nails</li>
+          </ul>
         </li>
       </ul>
-
-    </nav>
-      </header>
-    <hr>
-    <div>
-    <ul>
-      <li>Women Ethnic
-        
-        <ul>
-          <hr>
-          <li>Sarees</li>
-          <li>Suit</li>
-          <li>Kurta</li>
-          <li>Top</li>
-        </ul>
-      </li>
-      <li>Women Western
-        <ul>
-          <hr>
-          <li>Tops</li>
-          <li>Dresses</li>
-        </ul>
-      </li>
-      <li>Men
-        <ul>
-          <hr>
-          <li>Jeans</li>
-          <li>T-Shrits</li>
-        </ul>
-      </li>
-      <li>Kids
-        <ul>
-          <hr>
-          <li>bady set</li>
-          <li>Dresses</li>
-        </ul>
-      </li>
-      <li>Home&Kitchen
-        <ul>
-          <hr>
-          <li>Cookeware</li>
-          <li>Dinnerware</li>
-        </ul>
-      </li>
-      <li>Beauty & Healt
-        <ul>
-          <hr>
-          <li>Lips</li>
-          <li>Nails</li>
-        </ul>
-      </li>
-    </ul>
     </div>
     <a href="http://127.0.0.1:5500/messho.html"></a>
-  
-</body>
+  </body>
 </html>
